--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <div class="button text-center pt-4">
               <a href="#">
-                <button type="button" class="btn btn-primary text-white font-weight-bold py-3 px-5">Send Message</button>
+                <button type="submit" class="btn btn-primary text-white font-weight-bold py-3 px-5">Send Message</button>
               </a>
             </div>
           </div>
