--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="mb-3" class="row">
           <a target="target_blank" href="https://www.fiverr.com/bappygazi"><img src="./images/fiverr-account.jpg" alt="fiverr-account" class="img-fluid" /></a>
         </div>
       </div>
@@ -101,8 +101,7 @@
                 <img src="images/I-will-convert-UXPin-to-HTML-Using--Bootstrap-5-with-Responsive-Design1.png" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4>Coming Soon Page</h4>
-                <p class="py-3"><span class="badge badge-primary px-2">HTML</span> <span class="badge badge-primary px-2">CSS</span> <span class="badge badge-primary px-2">Animation</span> <span class="badge badge-primary px-2">Bootstrap 5</span></p>
+                <h4 class="mb-3">Coming Soon Page</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/flings-coming-soon-Bootstrap.v5-Responsive-Design-for-All-devices/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
             </div>
@@ -115,9 +114,8 @@
                 <img src="images/friverr-mockup-privew-.jpg" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4>Gaming Page</h4>
-                <p class="py-3"><span class="badge badge-primary px-2">HTML</span> <span class="badge badge-primary px-2">CSS</span> <span class="badge badge-primary px-2">Bootstrap 5</span></p>
-                <a target="target_blank" href="https://bappygazi.github.io/flings-coming-soon-Bootstrap.v5-Responsive-Design-for-All-devices/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+                <h4 class="mb-3">Gaming Page</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/NeonLegion/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
             </div>
           </div>
@@ -130,8 +128,7 @@
                 <img src="./images/project-preview-image.jpg" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4>Mobile Layout Design</h4>
-                <p class="py-3"><span class="badge badge-primary px-2">HTML</span> <span class="badge badge-primary px-2">SCSS</span></p>
+                <h4 class="mb-3">Mobile Layout</h4>
                 <button class="btn btn-blue-deep text-white" href="#" disabled>NDA Protacted</button>
               </div>
             </div>
@@ -145,15 +142,67 @@
                 <img src="images/gig-reparence-imafdge.jpg" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4>Lorem ipsum dolor</h4>
-                <p class="py-3"><span class="badge badge-primary px-2">Light</span></p>
-                <a target="target_blank" href="https://bappygazi.github.io/flings-coming-soon-Bootstrap.v5-Responsive-Design-for-All-devices/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+                <h4 class="mb-3">Crypto Cougars</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/CryptoCougars/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
             </div>
           </div>
           <!-- Crypto Cougars-->
 
-          <!-- Crypto Currency-->
+          <!-- Aurora-->
+          <div class="item mx-2">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
+                <img src="images/Aurora-preview.png" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-4">
+                <h4 class="mb-3">Aurora</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/aurora.com/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- Aurora-->
+
+          <!-- LevelUp design-->
+          <div class="item mx-2">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
+                <img src="images/gig-reparence-image.jpg" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-4">
+                <h4 class="mb-3">LevelUp Full Website</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/levelup-using-scss-Bootstrap4/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- LevelUp design-->
+
+          <!-- catchletter design-->
+          <div class="item mx-2">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
+                <img src="images/catchletter.jpg" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-4">
+                <h4 class="mb-3">Catchletter Full Website</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/Catchletter/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- catchletter design-->
+          <!-- anax design-->
+          <div class="item mx-2">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
+                <img src="images/anax.png" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-4">
+                <h4 class="mb-3">ANAX-Persoanl Portfolio</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/Anax-using-css-animation-and-jQuery-animation/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- anax design-->
         </div>
       </div>
     </section>
