--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <img src="./images/project-preview-image.jpg" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4 class="mb-3">Mobile Layout</h4>
+                <h4 class="mb-4">Mobile Layout Design</h4>
                 <button class="btn btn-blue-deep text-white" href="#" disabled>NDA Protacted</button>
               </div>
             </div>
@@ -197,7 +197,7 @@
                 <img src="images/anax.png" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4 class="mb-3">ANAX-Persoanl Portfolio</h4>
+                <h4 class="mb-3">ANAX-Persoanl Portfolio Web Page</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/Anax-using-css-animation-and-jQuery-animation/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
             </div>
@@ -213,13 +213,13 @@
       <div class="row m-auto">
         <div class="col-lg-12">
           <div class="portfolio-text text-center mb-4 mb-lg-0">
-            <h3>Contact Me</h3>
+            <h3>Contact Me hdfsgsggg gg dsgs</h3>
           </div>
         </div>
       </div>
       <div class="row m-auto">
         <div class="col-lg-7 m-auto">
-          <div class="form" action="mail.php" method="post">
+          <div class="form">
             <div class="row">
               <div class="col">
                 <input type="text" class="form-control input-form border-primary bg-light" name="name" placeholder="First name" aria-label="First name" />
