--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <div class="row m-auto">
         <div class="col-lg-12">
           <div class="portfolio-text text-center mb-4 mb-lg-0">
-            <h3>Contact Me hdfsgsggg gg dsgs</h3>
+            <h3>Contact Me</h3>
           </div>
         </div>
       </div>
