--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <a class="icon" href="https://twitter.com/bappy_sakaet"><i class="fab fa-twitter"></i></a>
       <a class="icon" href="https://www.linkedin.com/in/sakaet-hossain/"><i class="fab fa-linkedin-in"></i></a>
       <a class="icon text-center" href="https://www.fiverr.com/bappygazi"><img width="15" src="./images/fiverr-icon.png" alt="fiverr-icon" class="img-fluid" /></a>
-      <a class="icon text-center" href="https://www.upwork.com/freelancers/~0167f01ff6aab43ab8"><img width="22" src="./images/upwork.png" alt="upwork-icon" class="img-fluid pt-1" /></a>
 
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
         <span><i class="fas fa-bars"></i></span>
@@ -33,6 +32,9 @@
           </li>
           <li class="nav-item mx-lg-2">
             <a class="nav-link" href="#portfolio">PROJECT</a>
+          </li>
+          <li class="nav-item mx-lg-2">
+            <a class="nav-link" href="#reviews">CLIENT'S REVIEW</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">TALK TO ME</a>
@@ -66,23 +68,6 @@
     </section>
     <!-- about Html end -->
 
-    <!-- fiverr acccount html start -->
-    <section id="account" class="py-5">
-      <div class="container">
-        <div class="row m-auto">
-          <div class="col-lg-12">
-            <div class="portfolio-text text-center">
-              <h3 class="pb-4">My Fiverr Account</h3>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3" class="row">
-          <a target="target_blank" href="https://www.fiverr.com/bappygazi"><img src="./images/fiverr-account.jpg" alt="fiverr-account" class="img-fluid" /></a>
-        </div>
-      </div>
-    </section>
-    <!-- fiverr acccount html end -->
-
     <!-- portfolio Html start -->
     <section id="portfolio" class="bg-light">
       <div class="row m-auto">
@@ -93,9 +78,9 @@
         </div>
       </div>
       <div class="row m-auto pb-5">
-        <div class="owl-carousel owl-theme">
+        <div class="col-lg-4 col-6">
           <!-- comming soon page  -->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/I-will-convert-UXPin-to-HTML-Using--Bootstrap-5-with-Responsive-Design1.png" alt="img1" class="img-fluid rounded" />
@@ -107,8 +92,10 @@
             </div>
           </div>
           <!-- comming soon page  -->
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- legion gaming-->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/friverr-mockup-privew-.jpg" alt="img1" class="img-fluid rounded" />
@@ -120,9 +107,10 @@
             </div>
           </div>
           <!-- legion gaming-->
-
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- mobile layout-->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="./images/project-preview-image.jpg" alt="img1" class="img-fluid rounded" />
@@ -134,9 +122,10 @@
             </div>
           </div>
           <!--  mobile layout-->
-
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- Crypto Cougars-->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/gig-reparence-imafdge.jpg" alt="img1" class="img-fluid rounded" />
@@ -148,9 +137,10 @@
             </div>
           </div>
           <!-- Crypto Cougars-->
-
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- Aurora-->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/Aurora-preview.png" alt="img1" class="img-fluid rounded" />
@@ -162,9 +152,10 @@
             </div>
           </div>
           <!-- Aurora-->
-
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- LevelUp design-->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/gig-reparence-image.jpg" alt="img1" class="img-fluid rounded" />
@@ -176,9 +167,10 @@
             </div>
           </div>
           <!-- LevelUp design-->
-
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- catchletter design-->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/catchletter.jpg" alt="img1" class="img-fluid rounded" />
@@ -190,8 +182,10 @@
             </div>
           </div>
           <!-- catchletter design-->
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- anax design-->
-          <div class="item mx-2">
+          <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/anax.png" alt="img1" class="img-fluid rounded" />
@@ -207,6 +201,80 @@
       </div>
     </section>
     <!-- portfolio Html end -->
+
+    <section id="reviews" class="py-5">
+      <div class="container">
+        <div class="row m-auto">
+          <div class="col-lg-12">
+            <div class="portfolio-text text-center mb-4 mb-lg-0">
+              <h3>Client's Say</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="owl-carousel owl-theme py-5">
+              <div class="item mx-4">
+                <div class="review-text p-3 bg-light rounded">
+                  <div class="customer-info d-flex align-items-center">
+                    <div class="profile-img mr-2">
+                      <img style="width: 35px" src="images/6fb8d192-692c-4715-af69-827aab153d16.jpg" alt="clients-img" class="img-fluid rounded-circle border" />
+                    </div>
+                    <div class="profile-text">
+                      <h6>Benzoutmez</h6>
+                      <p class="text-muted d-flex align-itmes-center"><img style="width: 20px" src="./images/canada.png" alt="canada" class="img-fluid" /> <span class="pl-1 text-muted">Canada</span></p>
+                    </div>
+                  </div>
+                  <p class="pt-3">I highly recommend Bappy. he is very professional, a great communicator and a. persevering programmer. he won't stop until the job is perfect, which is exactly what I needed for my project. I would definitely work with this professional again.</p>
+                </div>
+              </div>
+              <div class="item mx-4">
+                <div class="review-text p-3 bg-light rounded">
+                  <div class="customer-info d-flex align-items-center">
+                    <div class="profile-img mr-2">
+                      <img style="width: 35px" src="https://dummyimage.com/35x35/bfbfbf/ffffff&text=C" alt="clients-img" class="img-fluid rounded-circle border" />
+                    </div>
+                    <div class="profile-text">
+                      <h6>commentfaire</h6>
+                      <p class="text-muted d-flex align-itmes-center"><img style="width: 20px" src="./images/Mauritius.png" alt="canada" class="img-fluid" /> <span class="pl-1 text-muted">Mauritius</span></p>
+                    </div>
+                  </div>
+                  <p class="pt-3">Nice job once again > As I expected ( The reason why I reorder !!!) Bappy is easy to work with : An he asks the right question before startin ... in order to avoid misundertanding)</p>
+                </div>
+              </div>
+              <div class="item mx-4">
+                <div class="review-text p-3 bg-light rounded">
+                  <div class="customer-info d-flex align-items-center">
+                    <div class="profile-img mr-2">
+                      <img style="width: 35px" src="images/5F5D1473-725F-426E-98B3-66F14B046D88.jfif" alt="clients-img" class="img-fluid rounded-circle border" />
+                    </div>
+                    <div class="profile-text">
+                      <h6>Anyuonn</h6>
+                      <p class="text-muted d-flex align-itmes-center"><img style="width: 20px" src="./images/usa.png" alt="United States" class="img-fluid" /> <span class="pl-1 text-muted">United States</span></p>
+                    </div>
+                  </div>
+                  <p class="pt-3">This seller was extremely patient and amazing to work with. He went above and beyond to make sure all expectations were meant. He did his job really well, it was great working with him!</p>
+                </div>
+              </div>
+              <div class="item mx-4">
+                <div class="review-text p-3 bg-light rounded">
+                  <div class="customer-info d-flex align-items-center">
+                    <div class="profile-img mr-2">
+                      <img style="width: 35px" src="images/ca8030cf-e2ae-4dc0-8c59-23de189dd8fa.jpeg" alt="clients-img" class="img-fluid rounded-circle border" />
+                    </div>
+                    <div class="profile-text">
+                      <h6>Ziadkame</h6>
+                      <p class="text-muted d-flex align-itmes-center"><img style="width: 20px" src="./images/egypt.png" alt="canada" class="img-fluid" /> <span class="pl-1 text-muted">CANADA</span></p>
+                    </div>
+                  </div>
+                  <p class="pt-3">Perfect seller with amazing skills, it was an absolute pleasure working with Bappy! Highly recommended!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- contact Html start -->
     <section id="contact">
