--- a/index.html
+++ b/index.html
@@ -362,5 +362,20 @@
       })(jQuery);
       var $mcj = jQuery.noConflict(true);
     </script>
+    <script>
+      var BotStar = { appId: "s2bc71be0-6b44-11ec-ae9e-71f61291b7d7", mode: "livechat" };
+      !(function (t, a) {
+        var e = function () {
+          (e.q = e.q || []).push(arguments);
+        };
+        (e.q = e.q || []), (t.BotStarApi = e);
+        !(function () {
+          var t = a.createElement("script");
+          (t.type = "text/javascript"), (t.async = 1), (t.src = "https://widget.botstar.com/static/js/widget.js");
+          var e = a.getElementsByTagName("script")[0];
+          e.parentNode.insertBefore(t, e);
+        })();
+      })(window, document);
+    </script>
   </body>
 </html>
