--- a/index.html
+++ b/index.html
@@ -363,7 +363,32 @@
     })(jQuery);
     var $mcj = jQuery.noConflict(true);
   </script>
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-  <div class="elfsight-app-f6710ad1-5411-4672-be1a-50e1f7f670af"></div>
+  <!-- GetButton.io widget -->
+  <script type="text/javascript">
+    (function () {
+      var options = {
+        facebook: "100047698974650", // Facebook page ID
+        whatsapp: "+8801860286676", // WhatsApp number
+        call_to_action: "Message us", // Call to action
+        button_color: "#129BF4", // Color of button
+        position: "left", // Position may be 'right' or 'left'
+        order: "whatsapp,facebook", // Order of buttons
+      };
+      var proto = 'https:',
+        host = "getbutton.io",
+        url = proto + '//static.' + host;
+      var s = document.createElement('script');
+      s.type = 'text/javascript';
+      s.async = true;
+      s.src = url + '/widget-send-button/js/init.js';
+      s.onload = function () {
+        WhWidgetSendButton.init(host, proto, options);
+      };
+      var x = document.getElementsByTagName('script')[0];
+      x.parentNode.insertBefore(s, x);
+    })();
+  </script>
+  <!-- /GetButton.io widget -->
 </body>
+
 </html>
