--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="80">
   <!--   header part html start-->
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-    <a class="icon" href="https://twitter.com/bappy_sakaet"><i class="fab fa-twitter"></i></a>
-    <a class="icon" href="https://www.linkedin.com/in/sakaet-hossain/"><i class="fab fa-linkedin-in"></i></a>
+    <a class="icon" href="https://twitter.com/bappyghazi"><i class="fab fa-twitter"></i></a>
+    <a class="icon" href="www.linkedin.com/in/bappygazi"><i class="fab fa-linkedin-in"></i></a>
     <a class="icon text-center" href="https://www.fiverr.com/bappygazi"><img width="15" src="./images/fiverr-icon.png" alt="fiverr-icon" class="img-fluid" /></a>
 
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
