--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
           <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
+                <img src="images/figma to html, sass, psd to html bootstrap 5 Preview order Image.png" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-4">
+                <h4 class="mb-3">Yacht Website</h4>
+                <a target="target_blank" href="https://marefun.co/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- comming soon page  -->
+        </div>
+        <div class="col-lg-4 col-6">
+          <!-- comming soon page  -->
+          <div class="items my-3">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
                 <img src="images/I-will-convert-UXPin-to-HTML-Using--Bootstrap-5-with-Responsive-Design1.png" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
@@ -264,7 +279,7 @@
                     </div>
                     <div class="profile-text">
                       <h6>Ziadkame</h6>
-                      <p class="text-muted d-flex align-itmes-center"><img style="width: 20px" src="./images/egypt.png" alt="canada" class="img-fluid" /> <span class="pl-1 text-muted">CANADA</span></p>
+                      <p class="text-muted d-flex align-itmes-center"><img style="width: 20px" src="./images/egypt.png" alt="canada" class="img-fluid" /> <span class="pl-1 text-muted">Egypt</span></p>
                     </div>
                   </div>
                   <p class="pt-3">Perfect seller with amazing skills, it was an absolute pleasure working with Bappy! Highly recommended!</p>
@@ -361,21 +376,6 @@
         ftypes[2] = "text";
       })(jQuery);
       var $mcj = jQuery.noConflict(true);
-    </script>
-    <script>
-      var BotStar = { appId: "s2bc71be0-6b44-11ec-ae9e-71f61291b7d7", mode: "livechat" };
-      !(function (t, a) {
-        var e = function () {
-          (e.q = e.q || []).push(arguments);
-        };
-        (e.q = e.q || []), (t.BotStarApi = e);
-        !(function () {
-          var t = a.createElement("script");
-          (t.type = "text/javascript"), (t.async = 1), (t.src = "https://widget.botstar.com/static/js/widget.js");
-          var e = a.getElementsByTagName("script")[0];
-          e.parentNode.insertBefore(t, e);
-        })();
-      })(window, document);
     </script>
   </body>
 </html>
