--- a/index.html
+++ b/index.html
@@ -82,6 +82,21 @@
           <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
+                <img src="images/Website-Desing--psd-to-html,-Figma-to-html.jpg" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-4">
+                <h4 class="mb-3">Yacht Website</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/photography/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- comming soon page  -->
+        </div>
+        <div class="col-lg-4 col-6">
+          <!-- comming soon page  -->
+          <div class="items my-3">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
                 <img src="images/figma to html, sass, psd to html bootstrap 5 Preview order Image.png" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
