--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="images/Website-Desing--psd-to-html,-Figma-to-html.jpg" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4 class="mb-3">Yacht Website</h4>
+                <h4 class="mb-3">Photography Landing Page</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/photography/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
             </div>
