--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
           <div class="col-lg-8 col-md-7">
             <div class="about-text text-md-left">
-              <h4>Hello, my name is</h4>
+              <h4>Hi, This</h4>
               <h1>Bappy Gazi</h1>
               <p>I’m a Professional front-end Developer / Website Designer and Problem solver. I have been working in this sector for almost 4 years and am still going through it.</p>
               <p>In these four years, I have worked in the online marketplace and have experience working with clients and different companies in different countries.</p>
