--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
           <!-- comming soon page  -->
         </div>
         <div class="col-lg-4 col-6">
+          <!-- comming soon page  -->
+          <div class="items my-3">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
+                <img src="images/I-will-convert-psd-to-html,-scss,-figma,-xd-to-html-with-bootstrap5.jpg" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-4">
+                <h4 class="mb-3">Coming Soon Page</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/CIC/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- comming soon page  -->
+        </div>
+        <div class="col-lg-4 col-6">
           <!-- legion gaming-->
           <div class="items my-3">
             <div class="portfolio-items p-1">
