--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="images/I-will-convert-psd-to-html,-scss,-figma,-xd-to-html-with-bootstrap5.jpg" alt="img1" class="img-fluid rounded" />
               </div>
               <div class="portfolio-font p-4">
-                <h4 class="mb-3">Coming Soon Page</h4>
+                <h4 class="mb-3">CIC Website Design</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/CIC/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
             </div>
