--- a/index.html
+++ b/index.html
@@ -78,19 +78,34 @@
       </div>
       <div class="row m-auto pb-5">
         <div class="col-lg-4 col-6">
-          <!-- comming soon page  -->
+          <!-- Photography Landing Pag  -->
+          <div class="items my-3">
+            <div class="portfolio-items p-1">
+              <div class="portfolio-img">
+                <img src="images/e-website-desgin-by-bappygazi.jpg" alt="img1" class="img-fluid rounded" />
+              </div>
+              <div class="portfolio-font p-2 p-md-4">
+                <h4 class="mb-3">Ecommerce website</h4>
+                <a target="target_blank" href="https://bappygazi.github.io/CustomShop/home.html"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              </div>
+            </div>
+          </div>
+          <!-- Photography Landing Pag  -->
+        </div>
+        <div class="col-lg-4 col-6">
+          <!-- Photography Landing Pag  -->
           <div class="items my-3">
             <div class="portfolio-items p-1">
               <div class="portfolio-img">
                 <img src="images/Website-Desing--psd-to-html,-Figma-to-html.jpg" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Photography Landing Page</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/photography/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
             </div>
           </div>
-          <!-- comming soon page  -->
+          <!-- Photography Landing Pag  -->
         </div>
         <div class="col-lg-4 col-6">
           <!-- comming soon page  -->
@@ -99,7 +114,7 @@
               <div class="portfolio-img">
                 <img src="images/figma to html, sass, psd to html bootstrap 5 Preview order Image.png" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Yacht Website</h4>
                 <a target="target_blank" href="https://marefun.co/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -114,7 +129,7 @@
               <div class="portfolio-img">
                 <img src="images/I-will-convert-UXPin-to-HTML-Using--Bootstrap-5-with-Responsive-Design1.png" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Coming Soon Page</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/flings-coming-soon-Bootstrap.v5-Responsive-Design-for-All-devices/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -129,7 +144,7 @@
               <div class="portfolio-img">
                 <img src="images/I-will-convert-psd-to-html,-scss,-figma,-xd-to-html-with-bootstrap5.jpg" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">CIC Website Design</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/CIC/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -144,7 +159,7 @@
               <div class="portfolio-img">
                 <img src="images/friverr-mockup-privew-.jpg" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Gaming Page</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/NeonLegion/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -159,7 +174,7 @@
               <div class="portfolio-img">
                 <img src="./images/project-preview-image.jpg" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Mobile Layout Design</h4>
                 <button class="btn btn-blue-deep text-white" href="#" disabled>NDA Protacted</button>
               </div>
@@ -174,7 +189,7 @@
               <div class="portfolio-img">
                 <img src="images/gig-reparence-imafdge.jpg" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Crypto Cougars</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/CryptoCougars/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -189,7 +204,7 @@
               <div class="portfolio-img">
                 <img src="images/Aurora-preview.png" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Aurora</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/aurora.com/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -204,7 +219,7 @@
               <div class="portfolio-img">
                 <img src="images/gig-reparence-image.jpg" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">LevelUp Full Website</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/levelup-using-scss-Bootstrap4/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -219,7 +234,7 @@
               <div class="portfolio-img">
                 <img src="images/catchletter.jpg" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">Catchletter Full Website</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/Catchletter/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
@@ -234,7 +249,7 @@
               <div class="portfolio-img">
                 <img src="images/anax.png" alt="img1" class="img-fluid rounded" />
               </div>
-              <div class="portfolio-font p-4">
+              <div class="portfolio-font p-2 p-md-4">
                 <h4 class="mb-3">ANAX-Persoanl Portfolio Web Page</h4>
                 <a target="target_blank" href="https://bappygazi.github.io/Anax-using-css-animation-and-jQuery-animation/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
               </div>
