--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="col-lg-6 m-auto">
         <div class="portfolio-text text-center">
           <h3>My Project</h3>
-          <p class="text-dark">Here are some samples of the work, I have done for my customers. You can check my code quality, code structure, and my effort. Open a site & press ( Command+U or Ctrl+ U )</p>
+          <p class="text-dark">Here are some samples of the work, I have done for my client's. You can check my code quality, code structure, and my effort. Open a site & press ( Command+U or Ctrl+ U )</p>
         </div>
       </div>
     </div>
